<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="app_name">Memory Game</string>
    <string name="action_settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_exit">Are you sure you want to exit the app ?</string>
    <string name="select_level_title">Select Level</string>
    <string name="confirm_exit_game">Are you sure you want to exit current game ?</string>
    <string name="victory">Victory</string>
    <string name="local">Same Device</string>
    <string name="internet">Internet</string>
    <string name="input_username">Welcome! Since this is your first run, we ask you for your Username.</string>
    <string name="success">Success</string>
    <string name="no_input">Error! Please insert something.</string>
    <string name="insertUsername">Insert username here...</string>
    <string name="input_usernamep2">Please insert player 2 username.</string>
    <string name="victory_mp">Victory %1$s! You guessed more cards than your opponent!</string>
    <string name="victory_sp">Victory %1$s! You guessed all cards in %2$d attemps!</string>
    <string name="victory_sp_intruders">Victory %1$s! You guessed all cards in %2$d attemps, having found %3$d intruders!</string>
    <string name="match_draw">Draw!</string>
    <string name="score_disp">Score: %1$d</string>
    <string name="wrong_disp">Wrong: %1$d</string>
    <string name="intruders_disp">Intruders: %1$d</string>
    <string name="now_playing">Now playing: %1$s</string>
    <string name="create">Create Game</string>
    <string name="join">Join Game</string>
    <string name="waiting_player">Waiting for player...</string>
    <string name="need_ip">Insert other player IP Address</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="clear_stats">Clear Stats</string>
    <string name="credits">Credits</string>
    <string name="credits_text">Developed by:\n\nDaniel Ferreira nº21220170\nNuno Silva nº21220170\n\n@ISEC 2016</string>
</resources>