<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="3"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GameScreens.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/LogoLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mainlogo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:weightSum="5">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/singleplayer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/multiplayer" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/options" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/stats" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/exit" />
    </LinearLayout>

</LinearLayout>
