<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context="pt.nunolevezinho.isec.jogodamemoria.GameScreens.MultiplayerTypeActivity">

    <TextView
        android:id="@+id/selectLevelText"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_weight="1.5"
        android:background="@drawable/title_portrait"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/multiplayer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/sameDeviceBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/local" />

        <Button
            android:id="@+id/networkBtn"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/yellowbutton"
            android:text="@string/internet" />
    </LinearLayout>


</LinearLayout>
